crates/test-files/fixtures/compile_errors/bad_ingot/src/biz/bad.fe
struct Bur:
    pass

struct Bud:
    pass